# PipelineDP

./: .gitignore  CNAME  Gemfile  LICENSE  Makefile  README.md  _config.yml  api-documentation.md  examples.md  get-started.md  index.html  key-definitions.md  overview.md  pylintrc.dms  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py
_includes/: footer.html  head.html  header.html
_layouts/: default.html  page.html
_sass/: _base.scss
analysis/: __init__.py  combiners.py  contribution_bounders.py  cross_partition_combiners.py  data_structures.py  dataset_summary.py  dp_algorithm_selector.py  dp_engine.py  dp_strategy_selector.py  histograms.py  metrics.py  parameter_tuning.py  per_partition_combiners.py  poisson_binomial.py  pre_aggregation.py  probability_computations.py  utility_analysis.py  utility_analysis_engine.py
api-documentation/: aggregate_params.html  dp_engine.html  index.html  private_beam.html  private_spark.html
api-reference/: dp_engine.html  private_beam.html  private_spark.html
contributing/: CONTRIBUTING.md  Dockerfile  requirements.dev.txt  sample_combined_data_1.txt
examples/: __init__.py  conference.ipynb  example_utils.py  movie_view_ratings.py  movie_view_ratings_beam.py  movie_view_ratings_local.py  movie_view_ratings_spark.py  parse_utils.py  quickstart.ipynb  restaurant_visits.ipynb  utility_analysis_demo_for_PEPR_2024.ipynb
pipeline_dp/: __init__.py  accumulator.py  advanced_query_builder.py  aggregate_params.py  beam_backend.py  budget_accounting.py  combiners.py  contribution_bounders.py  data_extractors.py  dataframes.py  dp_computations.py  dp_engine.py  histograms.py  input_validators.py  mean_var_params.py  partition_selection.py  pipeline_backend.py  pipeline_composite_functions.py  pipeline_functions.py  pipeline_operations.py  private_beam.py  private_contribution_bounds.py  private_spark.py  report_generator.py  sampling_utils.py  spark_backend.py  spark_rdd_backend.py
prototype/: README.md  aggregate_example.py  budget_accounting.py  data_structures.py  dp_utils.py  private_beam.py
tests/: __init__.py  accumulator_test.py  advanced_query_builder_test.py  aggregate_params_test.py  beam_backend_test.py  budget_accounting_test.py  combiners_test.py  contribution_bounders_test.py  dataframes_test.py  dp_computations_test.py  dp_engine_test.py  histograms_test.py  partition_selection_test.py  pipeline_backend_test.py  pipeline_composite_functions_test.py  pipeline_functions_test.py  pipeline_operations_test.py  private_beam_test.py  private_contribution_bounds_test.py  private_spark_test.py  report_generator_test.py  sampling_utils_test.py  spark_backend_test.py  spark_rdd_backend_test.py  util_test.py  utils_test.py
utility_analysis/: README.md  __init__.py  data_peeker.py  non_private_combiners.py  peeker_engine.py  raw_accumulator.py
utility_analysis_new/: __init__.py  combiners.py  contribution_bounders.py  data_structures.py  (+10 more)
(+86 files in other folders)
