[tool.poetry]
name = "pipeline-dp"
version = "0.2.2rc2"
description = ""
authors = ["Chinmay Shah <chinmayshah3899@gmail.com>", "Vadym Doroshenko <dvadym@google.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8, < 3.12"
python-dp = "^1.1.5rc4"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
twine = "^3.7.1"
pytest = "^6.2.5"
pytest-timeout = "^2.1.0"
pylint = "2.12.0"
bumpversion = "==0.5.3"
wheel = "^0.37.1"
setuptools = "^60.5.0"

[tool.yapf]
based_on_style = "google"
indent_width = 4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
